option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "MRClientProtocol";
option java_generic_services = true;

import "mr_service_protos.proto";

service MRClientProtocolService {
  rpc getJobReport (GetJobReportRequestProto) returns (GetJobReportResponseProto);
  rpc getTaskReport (GetTaskReportRequestProto) returns (GetTaskReportResponseProto);
  rpc getTaskAttemptReport (GetTaskAttemptReportRequestProto) returns (GetTaskAttemptReportResponseProto);
  rpc getCounters (GetCountersRequestProto) returns (GetCountersResponseProto);
  rpc getTaskAttemptCompletionEvents (GetTaskAttemptCompletionEventsRequestProto) returns (GetTaskAttemptCompletionEventsResponseProto);
  rpc getTaskReports (GetTaskReportsRequestProto) returns (GetTaskReportsResponseProto);
  rpc getDiagnostics (GetDiagnosticsRequestProto) returns (GetDiagnosticsResponseProto);

  rpc killJob (KillJobRequestProto) returns (KillJobResponseProto);
  rpc killTask (KillTaskRequestProto) returns (KillTaskResponseProto);
  rpc killTaskAttempt (KillTaskAttemptRequestProto) returns (KillTaskAttemptResponseProto);
  rpc failTaskAttempt (FailTaskAttemptRequestProto) returns (FailTaskAttemptResponseProto);
}
